# HydroCube

./: .gitignore  .nojekyll  Cargo.toml  README.md  configuration-reference.html  contributor-developer-guide.html  core-concepts-and-architecture.html  faq-and-troubleshooting.html  getting-started.html  how-to-guides.html  index.html  roadmap.html  robots.txt  sample_config.yml  search.json  security-and-deployment.html  sitemap.xml
.github/workflows/: build.yml
data/: verify_arrow_data.py
docs/: _quarto.yml  configuration-reference.qmd  contributor-developer-guide.qmd  core-concepts-and-architecture.qmd  faq-and-troubleshooting.qmd  getting-started.qmd  how-to-guides.qmd  index.qmd  roadmap.qmd  security-and-deployment.qmd
src/: main.rs
src/config/: cli.rs  config.rs
src/db/: db_manager.rs  mod.rs
src/ingestion/: directory_watcher.rs  handlers.rs  kafka_utils.rs  mod.rs
src/server/: mod.rs  web_embed.rs  web_handlers.rs  web_server.rs
static/: index.html
