[package]
name = "hydrocube"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"]}
actix-files = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rust-embed = "8.5.0"
duckdb = { version = "1.1.1", features = ["bundled"] }
mime_guess = "2.0.5"
anyhow = "1.0.95"
rustls = { version = "0.23.22", features = ["ring"] }
rustls-pemfile = "2.2.0"
notify = "8.0.0"
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
arrow = "53.4.0"
r2d2 = "0.8.10"

[profile.release]
incremental = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"